--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel-lang/common": "^6.7",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "stechstudio/filament-impersonate": "^3.15"
+        "stechstudio/filament-impersonate": "^3.15",
+        "swisnl/filament-backgrounds": "^1.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
